Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-6367

taskmgr: minor fixes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.3.15
    • Applications
    • Operating System: ReactOS
      Platform: x86 Hardware

    Description

      Created an attachment (id=7603)
      Fix for this bug.

      The attached patch will apply these fixes:

      1) Use of CheckDlgButton() and IsDlgButtonChecked() rather than SendMessage, it will improve code readability.

      2)Removes an useless initialization into perfpage.c

      3) GetWindowLong/SetWindowLong were replaced with GetWindowLongPtr/SetWindowLongPtr, but GWL_WNDPROC and GWL_ID were not with GWLP_WNDPROC and GWLP_ID.

      4) Corrected some comment texts.

      Sincerely,

      Carlo Bramini

      Attachments

        1. taskmgr.txt
          6 kB
          Carlo Bramix
        2. ROS_taskmgr.png
          26 kB
          milawynsrealm

        Activity

          People

            AmineKhaldi AmineKhaldi
            Carlo Bramix Carlo Bramix
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: