[TASKMGR] 1) Use of CheckDlgButton() and IsDlgButtonChecked() rather than SendMessage, it will improve code readability. 2)Removes an useless initialization into perfpage.c 3) GetWindowLong/SetWindowLong were replaced with GetWindowLongPtr/SetWindowLongPtr, but GWL_WNDPROC and GWL_ID were not with GWLP_WNDPROC and GWLP_ID. 4) Corrected some comment texts. Patch by Carlo Bramini CORE-6367 #resolve

svn path=/trunk/; revision=57989